--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql2": "^3.15.3",
     "nodemailer": "^7.0.10",
     "prisma": "^6.18.0",
+    "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3",
